--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <div class="container">
         <h1>Ultimate Secret Number</h1>
         <div id="game-setup" class="section">
-            <h2>Game Setup</h2>
+            <h2>Welcome!</h2>
             <div class="instructions">
                 <h3>How to Play</h3>
                 <p>Ultimate Secret Number is a group game for 2-10 players.</p>
