--- a/index.html
+++ b/index.html
@@ -15,12 +15,12 @@
                 <ol>
                     <li>A secret number between 1 and the selected maximum range is chosen.</li>
                     <li>Players take turns trying to guess the number.</li>
-                    <li>To make a guess, you must first correctly answer a trivia question.</li>
+                    <li>To make a guess, you must first correctly answer a question.</li>
                     <li>If you answer incorrectly, your turn is skipped in the current round.</li>
                     <li>When guessing, the range narrows based on your guess.</li>
                     <li>If you guess too high, that becomes the new upper bound.</li>
                     <li>If you guess too low, that becomes the new lower bound.</li>
-                    <li>The player who is forced to guess the secret number loses!</li>
+                    <li>The player who is forced to guess the secret number wins!</li>
                 </ol>
             </div>
             <div class="setup-controls">
