--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
                     <li>When guessing, the range narrows based on your guess.</li>
                     <li>If you guess too high, that becomes the new upper bound.</li>
                     <li>If you guess too low, that becomes the new lower bound.</li>
-                    <li>The player who is forced to guess the secret number wins!</li>
+                    <li>The player who guesses the secret number wins!</li>
                 </ol>
             </div>
             <div class="setup-controls">
